Bug 153472 - PDF/A-1b export tags file as PDF/A-1a (but not compliant with PDF/A-1a)
Summary: PDF/A-1b export tags file as PDF/A-1a (but not compliant with PDF/A-1a)
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Printing and PDF export (show other bugs)
Version:
(earliest affected)
7.4.1.2 release
Hardware: x86-64 (AMD64) Windows (All)
: medium normal
Assignee: Michael Stahl
URL:
Whiteboard: target:24.2.0 target:7.6.0.2
Keywords: accessibility
Depends on:
Blocks: PDF-Accessibility
  Show dependency treegraph
 
Reported: 2023-02-08 13:59 UTC by Artemy Gordon
Modified: 2023-10-14 23:41 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments
Initial file to export (222.58 KB, application/vnd.openxmlformats-officedocument.wordprocessingml.document)
2023-02-08 14:00 UTC, Artemy Gordon
Details
Exported PDF as PDF/A-1B (117.21 KB, application/pdf)
2023-02-08 14:02 UTC, Artemy Gordon
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Artemy Gordon 2023-02-08 13:59:12 UTC
Description:
I test how LibreOffce works with export to pdf and I can't understand one point. I select PDF/A-1b format in the dialog, but resulted pdf looks like PDF/A-1a because in the pdf I see section:

<pdfaid:part>1</pdfaid:part>
<pdfaid:conformance>A</pdfaid:conformance>.

But anyway this file is not compliant to PDF/A-1a, only to PDF/A-1b, if change conformance level to B. For testing I'm using verapdf and it says (when checking PDF/A-1a):

Specification: ISO 19005-1:2005, Clause: 6.8.3, Test number: 1	
The logical structure of the conforming file shall be described by a structure hierarchy rooted in the StructTreeRoot entry of the document catalog dictionary, as described in PDF Reference 9.6

As I think there is no reason to write to pdf that file is PDF/A-1a

Steps to Reproduce:
1. Attempt to export PDF/A-1b

Actual Results:
Obtain PDF/A-1a, which is not compliant. It compliants only to PDF/A-1b, if change conformance level to B

Expected Results:
I'd expect to obtain complaint file to PDF/A-1b


Reproducible: Always


User Profile Reset: No

Additional Info:
I checked similar bug https://bugs.documentfoundation.org/show_bug.cgi?id=140759, but as I understand this case is different.

Version: 7.4.1.2 (x64) / LibreOffice Community
Build ID: 3c58a8f3a960df8bc8fd77b461821e42c061c5f0
CPU threads: 8; OS: Windows 10.0 Build 19045; UI render: Skia/Raster; VCL: win
Locale: ru-RU (ru_RU); UI: ru-RU
Calc: CL
Comment 1 Artemy Gordon 2023-02-08 14:00:53 UTC
Created attachment 185218 [details]
Initial file to export
Comment 2 Artemy Gordon 2023-02-08 14:02:02 UTC
Created attachment 185219 [details]
Exported PDF as PDF/A-1B
Comment 3 Stéphane Guillou (stragu) 2023-02-09 14:38:32 UTC
I tested exporting to PDF/A-1b with:

Version: 7.6.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: d8ae6d1388f28c405c4de2dfe93dbfe2d8acd470
CPU threads: 8; OS: Linux 5.15; UI render: default; VCL: gtk3
Locale: en-AU (en_AU.UTF-8); UI: en-US
Calc: threaded

https://demo.verapdf.org/ autodetects PDF/A-1A, but if I select the PDF/A-1B validation profile for the profile, the file is compliant.

The file properties dialog on Nautilus / GNOME Files 3.36.3 also shows "PDF/A - 1a" in Document > Format.

I guess the issue here is that it does export to specs but doesn't tag the file properly?

Thorsten, just thought I'd ping you in case you have a comment following your FOSDEM PDF accessibility presentation :)
Comment 4 Artemy Gordon 2023-02-10 09:57:46 UTC
In general you're right. Just need to tag the file properly.

Verapdf (and other tools) autodetects PDF/A-1A because file has information inside about pdf version. For example, you can change

<pdfaid:part>1</pdfaid:part>
<pdfaid:conformance>A</pdfaid:conformance> to

<pdfaid:part>3</pdfaid:part>
<pdfaid:conformance>b</pdfaid:conformance>. And verapdf will check conformance to PDF/A-3b
Comment 5 Commit Notification 2023-07-07 16:33:12 UTC
Michael Stahl committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/41717420af68994c2fde522ea86db6e5ed643034

tdf#153472 vcl: PDF/A export: produce valid XMP metadata

It will be available in 24.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 6 Michael Stahl 2023-07-07 16:34:04 UTC
fixed on master
Comment 7 Commit Notification 2023-07-08 20:39:29 UTC
Michael Stahl committed a patch related to this issue.
It has been pushed to "libreoffice-7-6":

https://git.libreoffice.org/core/commit/c4b12d06698402984b3ffdbd2c139f261fa35ca1

tdf#153472 vcl: PDF/A export: produce valid XMP metadata

It will be available in 7.6.0.2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.