tdf#153472 vcl: PDF/A export: produce valid XMP metadata

* historically the PDF export claimed to produce PDF/A-1a, which was
  removed from the UI in commit ed4a0eed82e2f29e8163a445db992d22c6d07134
  "tdf#62728 add PDF/A-2 support, change UI default to use that", and
  then reintroduced, presumably intentionally changed, as PDF/A-1b in
  commit 49cfcf777d03abf59557cad021b4e5c4445de3c0 "tdf#62728 Provide
  both A/1 and A/2 in PDF export dialog"

  Adapt the XMP metadata to always write "B".

* if PDF/UA is enabled, veraPDF complains about the added pdfuaid:part:

  Specification: ISO 19005-2:2011, Clause: 6.6.2.3, Test number: 7
  All properties specified in XMP form shall use either the predefined schemas defined in the XMP Specification, ISO 19005-1 or this part of ISO 19005, or any extension schemas that comply with 6.6.2.3.2.

Change-Id: I77b9fb728476e85830e3771135ac5a269e96b306
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/154169
Tested-by: Jenkins
Reviewed-by: Michael Stahl <michael.stahl@allotropia.de>
(cherry picked from commit 41717420af68994c2fde522ea86db6e5ed643034)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/154178
Reviewed-by: Caolán McNamara <caolan.mcnamara@collabora.com>